// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmployeeList /> renders 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(EmployeeList)
    allDepartmentsForSiblingCommunication={
      Array [
        Object {
          "__v": 0,
          "_id": "5c6c0f969c84ea3c7194a7de",
          "createdAt": "2019-02-19T14:15:50.690Z",
          "name": "Ash",
          "type": "Industrial Material",
          "updatedAt": "2019-02-19T14:15:50.690Z",
        },
        Object {
          "__v": 0,
          "_id": "5c6c0f839c84ea3c7194a7dd",
          "createdAt": "2019-02-19T14:15:31.140Z",
          "name": "Coal",
          "type": "Minerals",
          "updatedAt": "2019-02-19T14:15:31.140Z",
        },
        Object {
          "__v": 0,
          "_id": "5c651f44ddff9f780e4cdbcc",
          "createdAt": "2019-02-14T07:56:52.310Z",
          "name": "Steel123",
          "type": "Department",
          "updatedAt": "2019-02-27T11:05:55.121Z",
        },
      ]
    }
    totalItemsUnformatted={
      Array [
        Object {
          "__v": 0,
          "_id": "5c793b825b9fac072bab18c8",
          "avg_employee_productivity": 2,
          "department_objectId": Object {
            "__v": 0,
            "_id": "5c6c0f839c84ea3c7194a7dd",
            "createdAt": "2019-02-19T14:15:31.140Z",
            "name": "Coal",
            "type": "Minerals",
            "updatedAt": "2019-02-19T14:15:31.140Z",
          },
          "createdAt": "2019-03-01T14:02:42.177Z",
          "date": "2019-03-03T00:00:00.000Z",
          "benchmark_employee_productivity": 1,
          "updatedAt": "2019-03-03T08:48:11.678Z",
        },
        Object {
          "__v": 0,
          "_id": "5c7937665b9fac072bab18c6",
          "avg_employee_productivity": 11,
          "department_objectId": Object {
            "__v": 0,
            "_id": "5c651f71ddff9f780e4cdbcd",
            "createdAt": "2019-02-14T07:57:37.736Z",
            "name": "Platinum",
            "type": "Precious Metals",
            "updatedAt": "2019-02-28T12:53:50.876Z",
          },
          "createdAt": "2019-03-01T13:45:10.027Z",
          "date": "2019-03-01T13:43:56.249Z",
          "benchmark_employee_productivity": 111,
          "updatedAt": "2019-03-01T13:45:10.027Z",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allDepartmentsForSiblingCommunication": Array [
        Object {
          "__v": 0,
          "_id": "5c6c0f969c84ea3c7194a7de",
          "createdAt": "2019-02-19T14:15:50.690Z",
          "name": "Ash",
          "type": "Industrial Material",
          "updatedAt": "2019-02-19T14:15:50.690Z",
        },
        Object {
          "__v": 0,
          "_id": "5c6c0f839c84ea3c7194a7dd",
          "createdAt": "2019-02-19T14:15:31.140Z",
          "name": "Coal",
          "type": "Minerals",
          "updatedAt": "2019-02-19T14:15:31.140Z",
        },
        Object {
          "__v": 0,
          "_id": "5c651f44ddff9f780e4cdbcc",
          "createdAt": "2019-02-14T07:56:52.310Z",
          "name": "Steel123",
          "type": "Department",
          "updatedAt": "2019-02-27T11:05:55.121Z",
        },
      ],
      "classes": Object {
        "actions": "EmployeeList-actions-25",
        "arrow": "EmployeeList-arrow-15",
        "arrowPopper": "EmployeeList-arrowPopper-14",
        "bootstrapPlacementBottom": "EmployeeList-bootstrapPlacementBottom-21",
        "bootstrapPlacementLeft": "EmployeeList-bootstrapPlacementLeft-18",
        "bootstrapPlacementRight": "EmployeeList-bootstrapPlacementRight-19",
        "bootstrapPlacementTop": "EmployeeList-bootstrapPlacementTop-20",
        "bootstrapPopper": "EmployeeList-bootstrapPopper-16",
        "bootstrapTooltip": "EmployeeList-bootstrapTooltip-17",
        "customTableCell": "EmployeeList-customTableCell-10",
        "extendedIcon": "EmployeeList-extendedIcon-6",
        "fab": "EmployeeList-fab-4",
        "fabButton": "EmployeeList-fabButton-5",
        "highlight": "EmployeeList-highlight-22",
        "lightTooltip": "EmployeeList-lightTooltip-7",
        "monthlyData": "EmployeeList-monthlyData-12",
        "palette": "EmployeeList-palette-1",
        "root": "EmployeeList-root-2",
        "row": "EmployeeList-row-11",
        "space": "EmployeeList-space-3",
        "spacer": "EmployeeList-spacer-23",
        "spacerCurrentMonth": "EmployeeList-spacerCurrentMonth-24",
        "table": "EmployeeList-table-8",
        "tableWrapper": "EmployeeList-tableWrapper-9",
        "title": "EmployeeList-title-26",
        "todaysData": "EmployeeList-todaysData-13",
      },
      "totalItemsUnformatted": Array [
        Object {
          "__v": 0,
          "_id": "5c793b825b9fac072bab18c8",
          "avg_employee_productivity": 2,
          "department_objectId": Object {
            "__v": 0,
            "_id": "5c6c0f839c84ea3c7194a7dd",
            "createdAt": "2019-02-19T14:15:31.140Z",
            "name": "Coal",
            "type": "Minerals",
            "updatedAt": "2019-02-19T14:15:31.140Z",
          },
          "createdAt": "2019-03-01T14:02:42.177Z",
          "date": "2019-03-03T00:00:00.000Z",
          "benchmark_employee_productivity": 1,
          "updatedAt": "2019-03-03T08:48:11.678Z",
        },
        Object {
          "__v": 0,
          "_id": "5c7937665b9fac072bab18c6",
          "avg_employee_productivity": 11,
          "department_objectId": Object {
            "__v": 0,
            "_id": "5c651f71ddff9f780e4cdbcd",
            "createdAt": "2019-02-14T07:57:37.736Z",
            "name": "Platinum",
            "type": "Precious Metals",
            "updatedAt": "2019-02-28T12:53:50.876Z",
          },
          "createdAt": "2019-03-01T13:45:10.027Z",
          "date": "2019-03-01T13:43:56.249Z",
          "benchmark_employee_productivity": 111,
          "updatedAt": "2019-03-01T13:45:10.027Z",
        },
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allDepartmentsForSiblingCommunication": Array [
          Object {
            "__v": 0,
            "_id": "5c6c0f969c84ea3c7194a7de",
            "createdAt": "2019-02-19T14:15:50.690Z",
            "name": "Ash",
            "type": "Industrial Material",
            "updatedAt": "2019-02-19T14:15:50.690Z",
          },
          Object {
            "__v": 0,
            "_id": "5c6c0f839c84ea3c7194a7dd",
            "createdAt": "2019-02-19T14:15:31.140Z",
            "name": "Coal",
            "type": "Minerals",
            "updatedAt": "2019-02-19T14:15:31.140Z",
          },
          Object {
            "__v": 0,
            "_id": "5c651f44ddff9f780e4cdbcc",
            "createdAt": "2019-02-14T07:56:52.310Z",
            "name": "Steel123",
            "type": "Department",
            "updatedAt": "2019-02-27T11:05:55.121Z",
          },
        ],
        "classes": Object {
          "actions": "EmployeeList-actions-25",
          "arrow": "EmployeeList-arrow-15",
          "arrowPopper": "EmployeeList-arrowPopper-14",
          "bootstrapPlacementBottom": "EmployeeList-bootstrapPlacementBottom-21",
          "bootstrapPlacementLeft": "EmployeeList-bootstrapPlacementLeft-18",
          "bootstrapPlacementRight": "EmployeeList-bootstrapPlacementRight-19",
          "bootstrapPlacementTop": "EmployeeList-bootstrapPlacementTop-20",
          "bootstrapPopper": "EmployeeList-bootstrapPopper-16",
          "bootstrapTooltip": "EmployeeList-bootstrapTooltip-17",
          "customTableCell": "EmployeeList-customTableCell-10",
          "extendedIcon": "EmployeeList-extendedIcon-6",
          "fab": "EmployeeList-fab-4",
          "fabButton": "EmployeeList-fabButton-5",
          "highlight": "EmployeeList-highlight-22",
          "lightTooltip": "EmployeeList-lightTooltip-7",
          "monthlyData": "EmployeeList-monthlyData-12",
          "palette": "EmployeeList-palette-1",
          "root": "EmployeeList-root-2",
          "row": "EmployeeList-row-11",
          "space": "EmployeeList-space-3",
          "spacer": "EmployeeList-spacer-23",
          "spacerCurrentMonth": "EmployeeList-spacerCurrentMonth-24",
          "table": "EmployeeList-table-8",
          "tableWrapper": "EmployeeList-tableWrapper-9",
          "title": "EmployeeList-title-26",
          "todaysData": "EmployeeList-todaysData-13",
        },
        "totalItemsUnformatted": Array [
          Object {
            "__v": 0,
            "_id": "5c793b825b9fac072bab18c8",
            "avg_employee_productivity": 2,
            "department_objectId": Object {
              "__v": 0,
              "_id": "5c6c0f839c84ea3c7194a7dd",
              "createdAt": "2019-02-19T14:15:31.140Z",
              "name": "Coal",
              "type": "Minerals",
              "updatedAt": "2019-02-19T14:15:31.140Z",
            },
            "createdAt": "2019-03-01T14:02:42.177Z",
            "date": "2019-03-03T00:00:00.000Z",
            "benchmark_employee_productivity": 1,
            "updatedAt": "2019-03-03T08:48:11.678Z",
          },
          Object {
            "__v": 0,
            "_id": "5c7937665b9fac072bab18c6",
            "avg_employee_productivity": 11,
            "department_objectId": Object {
              "__v": 0,
              "_id": "5c651f71ddff9f780e4cdbcd",
              "createdAt": "2019-02-14T07:57:37.736Z",
              "name": "Platinum",
              "type": "Precious Metals",
              "updatedAt": "2019-02-28T12:53:50.876Z",
            },
            "createdAt": "2019-03-01T13:45:10.027Z",
            "date": "2019-03-01T13:43:56.249Z",
            "benchmark_employee_productivity": 111,
            "updatedAt": "2019-03-01T13:45:10.027Z",
          },
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {},
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`<EmployeeList /> returns the default empty array when there is no data to map through or what would happen when I render the component with no data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(EmployeeList) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "actions": "EmployeeList-actions-25",
        "arrow": "EmployeeList-arrow-15",
        "arrowPopper": "EmployeeList-arrowPopper-14",
        "bootstrapPlacementBottom": "EmployeeList-bootstrapPlacementBottom-21",
        "bootstrapPlacementLeft": "EmployeeList-bootstrapPlacementLeft-18",
        "bootstrapPlacementRight": "EmployeeList-bootstrapPlacementRight-19",
        "bootstrapPlacementTop": "EmployeeList-bootstrapPlacementTop-20",
        "bootstrapPopper": "EmployeeList-bootstrapPopper-16",
        "bootstrapTooltip": "EmployeeList-bootstrapTooltip-17",
        "customTableCell": "EmployeeList-customTableCell-10",
        "extendedIcon": "EmployeeList-extendedIcon-6",
        "fab": "EmployeeList-fab-4",
        "fabButton": "EmployeeList-fabButton-5",
        "highlight": "EmployeeList-highlight-22",
        "lightTooltip": "EmployeeList-lightTooltip-7",
        "monthlyData": "EmployeeList-monthlyData-12",
        "palette": "EmployeeList-palette-1",
        "root": "EmployeeList-root-2",
        "row": "EmployeeList-row-11",
        "space": "EmployeeList-space-3",
        "spacer": "EmployeeList-spacer-23",
        "spacerCurrentMonth": "EmployeeList-spacerCurrentMonth-24",
        "table": "EmployeeList-table-8",
        "tableWrapper": "EmployeeList-tableWrapper-9",
        "title": "EmployeeList-title-26",
        "todaysData": "EmployeeList-todaysData-13",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "actions": "EmployeeList-actions-25",
          "arrow": "EmployeeList-arrow-15",
          "arrowPopper": "EmployeeList-arrowPopper-14",
          "bootstrapPlacementBottom": "EmployeeList-bootstrapPlacementBottom-21",
          "bootstrapPlacementLeft": "EmployeeList-bootstrapPlacementLeft-18",
          "bootstrapPlacementRight": "EmployeeList-bootstrapPlacementRight-19",
          "bootstrapPlacementTop": "EmployeeList-bootstrapPlacementTop-20",
          "bootstrapPopper": "EmployeeList-bootstrapPopper-16",
          "bootstrapTooltip": "EmployeeList-bootstrapTooltip-17",
          "customTableCell": "EmployeeList-customTableCell-10",
          "extendedIcon": "EmployeeList-extendedIcon-6",
          "fab": "EmployeeList-fab-4",
          "fabButton": "EmployeeList-fabButton-5",
          "highlight": "EmployeeList-highlight-22",
          "lightTooltip": "EmployeeList-lightTooltip-7",
          "monthlyData": "EmployeeList-monthlyData-12",
          "palette": "EmployeeList-palette-1",
          "root": "EmployeeList-root-2",
          "row": "EmployeeList-row-11",
          "space": "EmployeeList-space-3",
          "spacer": "EmployeeList-spacer-23",
          "spacerCurrentMonth": "EmployeeList-spacerCurrentMonth-24",
          "table": "EmployeeList-table-8",
          "tableWrapper": "EmployeeList-tableWrapper-9",
          "title": "EmployeeList-title-26",
          "todaysData": "EmployeeList-todaysData-13",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {},
  },
  Symbol(enzyme.__childContext__): null,
}
`;
